# fg_forge_analytics

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint-python.yml  pytest.yml
src/: main.py
