[project]
name = "fg-forge-analytics"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "bmos", email = "wil.thieme@protonmail.com" }]
#urls = { Repository = "https://github.com/bmos/fg_forge_analytics" }
dependencies = [
    "pandas==2.2.3",
    "matplotlib==3.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.9.6"
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["B", "W", "C"]
ignore = ["C400", "C401"]
